crates/ruff_python_parser/tests/snapshots/valid_syntax@from_import_soft_keyword_module_name.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/from_import_soft_keyword_module_name.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..125,
        body: [
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(None),
                    range: 0..25,
                    module: Some(
                        Identifier {
                            id: Name("match"),
                            range: 5..10,
                            node_index: NodeIndex(None),
                        },
                    ),
                    names: [
                        Alias {
                            range: 18..25,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("pattern"),
                                range: 18..25,
                                node_index: NodeIndex(None),
                            },
                            asname: None,
                            is_resource: false,
                        },
                    ],
                    level: 0,
                    is_lazy: false,
                    is_export: false,
                },
            ),
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(None),
                    range: 26..46,
                    module: Some(
                        Identifier {
                            id: Name("type"),
                            range: 31..35,
                            node_index: NodeIndex(None),
                        },
                    ),
                    names: [
                        Alias {
                            range: 43..46,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("bar"),
                                range: 43..46,
                                node_index: NodeIndex(None),
                            },
                            asname: None,
                            is_resource: false,
                        },
                    ],
                    level: 0,
                    is_lazy: false,
                    is_export: false,
                },
            ),
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(None),
                    range: 47..71,
                    module: Some(
                        Identifier {
                            id: Name("case"),
                            range: 52..56,
                            node_index: NodeIndex(None),
                        },
                    ),
                    names: [
                        Alias {
                            range: 64..71,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("pattern"),
                                range: 64..71,
                                node_index: NodeIndex(None),
                            },
                            asname: None,
                            is_resource: false,
                        },
                    ],
                    level: 0,
                    is_lazy: false,
                    is_export: false,
                },
            ),
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(None),
                    range: 72..92,
                    module: Some(
                        Identifier {
                            id: Name("lazy"),
                            range: 77..81,
                            node_index: NodeIndex(None),
                        },
                    ),
                    names: [
                        Alias {
                            range: 89..92,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("qux"),
                                range: 89..92,
                                node_index: NodeIndex(None),
                            },
                            asname: None,
                            is_resource: false,
                        },
                    ],
                    level: 0,
                    is_lazy: false,
                    is_export: false,
                },
            ),
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(None),
                    range: 93..124,
                    module: Some(
                        Identifier {
                            id: Name("match.type.case"),
                            range: 98..113,
                            node_index: NodeIndex(None),
                        },
                    ),
                    names: [
                        Alias {
                            range: 121..124,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("foo"),
                                range: 121..124,
                                node_index: NodeIndex(None),
                            },
                            asname: None,
                            is_resource: false,
                        },
                    ],
                    level: 0,
                    is_lazy: false,
                    is_export: false,
                },
            ),
        ],
    },
)
```
