crates/ruff_python_parser/tests/snapshots/valid_syntax@function_def_parenthesized_return_types.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/function_def_parenthesized_return_types.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..54,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 0..24,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 4..7,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 7..9,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: Some(
                        Tuple(
                            ExprTuple {
                                node_index: NodeIndex(None),
                                range: 13..19,
                                elts: [
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 14..17,
                                            id: Name("int"),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: true,
                                is_anon_named_tuple: false,
                                is_anon_named_tuple_value: false,
                                callable_shape: None,
                                is_parameter_shape: false,
                            },
                        ),
                    ),
                    raises: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 21..24,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 21..24,
                                    },
                                ),
                            },
                        ),
                    ],
                    is_trailing_lambda: false,
                    is_asserts_return: false,
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 25..53,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 29..32,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 32..34,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: Some(
                        Tuple(
                            ExprTuple {
                                node_index: NodeIndex(None),
                                range: 38..48,
                                elts: [
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 39..42,
                                            id: Name("int"),
                                            ctx: Load,
                                        },
                                    ),
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 44..47,
                                            id: Name("str"),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: true,
                                is_anon_named_tuple: false,
                                is_anon_named_tuple_value: false,
                                callable_shape: None,
                                is_parameter_shape: false,
                            },
                        ),
                    ),
                    raises: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 50..53,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 50..53,
                                    },
                                ),
                            },
                        ),
                    ],
                    is_trailing_lambda: false,
                    is_asserts_return: false,
                },
            ),
        ],
    },
)
```
